@@ -7,6 +7,8 @@ Version 1.7.11
        refresh properly. (Stefan)
 - BUG: Issue #433: Show log by date range is using
        only "start" or "end" date, not both. (Stefan)
+- BUG: Issue #435: child items not shown when
+       adding an ignored folder. (Stefan)
 
 Version 1.7.10
 - BUG: Issue #406: wrong image positioning. (Stefan)
